# code2video

./: .env.example  .gitignore  README.md  README_en.md  main.py  pyproject.toml  requirements.txt  start-dev.bat  start-dev.ps1  start-dev.sh
.github/: copilot-instructions.md
.github/workflows/: build-tauri.yml
backend/: main.py  requirements.txt
backend/api/: generate.py  projects.py  refiner.py
docs/: ARCHITECTURE.md  BACKEND.md  CHANGELOG.md  DEPLOYMENT.md  FRONTEND.md
frontend/: components.json  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: GenerateForm.tsx  LogViewer.tsx  ProjectList.tsx  RefinerPanel.tsx  SetupWizard.tsx  StoryboardEditor.tsx  ThemeToggle.tsx  VideoPlayer.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  tabs.tsx  textarea.tsx
frontend/lib/: api.ts  types.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: backend_manager.rs  env_checker.rs  main.rs
mathvideo/: __init__.py  __main__.py  cli.py  config.py  gemini_native.py  llm_client.py  manim_base.py  utils.py
mathvideo/agents/: __init__.py  asset_manager.py  coder.py  critic.py  planner.py  prompts.py  router.py  skill_manager.py
mathvideo/skills/common/: grid_positioning.md  label_placement.md  visual_consistency.md
mathvideo/skills/geometry/: angle_bisector_parallel.md  midpoint_extension.md  sequential_sections.md  symmetry_construction.md  triangle_construction.md
mathvideo/skills/knowledge/: .gitkeep
output/area-of-a-circle/: storyboard.json
output/triangle-area/: storyboard.json
output/勾股定理/: storyboard.json
output/勾股定理讲解/: storyboard.json
src/: config.py  llm_client.py  manim_base.py
src/agents/: asset_manager.py  coder.py  critic.py  planner.py  prompts.py
test_input/: example1.md  example2.md  example3.md
tools/legacy/: claude.py  gemini.py
tools/vision/: test_gemini_multi_frames.py  test_gemini_vision.py
(+51 files in other folders)
